Fix system tray bubble height to be consistent with its alignment.

When shelf is aligned vertically (left or right), the bottom of the tray
is aligned to the bottom of the system tray anchor, rather than the top
of it. The max height should be calculated accordingly.

The positioning of the bubble was changed by crrev.com/c/1141750 but
bubble height was inconsistent with it.

Bug: 863844
Change-Id: I2e92f109d815d9b6e581caff74f12c7874aecbdb
Reviewed-on: https://chromium-review.googlesource.com/1165108
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581430}
Former-commit-id: 57e6fbee7213c84e9bea63908de7b62320c5ef90